--- a/start.html
+++ b/start.html
@@ -7,6 +7,8 @@
               <title>Document</title>
 </head>
 <body>
-      <h1>this is start file not index file</h1>        
+      <h1>this is start file not index file</h1>    
+      <img src="Cat03.jpg" alt="">    
+      
 </body>
 </html>
